Update mobile sync and notification handling